# OpenGL_Starter

./: .clang-format  .gitignore  Application.cpp  CMakeLists.txt  README.md  build.sh  configure.sh  format.sh  run.sh
include/: Application.h
src/: Application.cpp
